UTs fixed for Console Documents